--- a/source-css/sweetie_belle.css
+++ b/source-css/sweetie_belle.css
@@ -281,10 +281,10 @@ a[href|="/sp"] {
     }
 /* curved borders for tabs */
 .tabmenu li a, .pagename a {
-    /*   border-top-left-radius: 5px;
-        border-top-right-radius: 5px */
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    /*-moz-border-radius: 5px;
+    -webkit-border-radius: 5px*/
     }
 
 /* ---------- Make the CSS text box bigger ---------- */
