--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -460,7 +460,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/buzzlestia"], a[href|="/cloudkicker"], a[href|="/bigmacgrin"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/implylestia"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/buzzlestia"], a[href|="/cloudkicker"], a[href|="/bigmacgrin"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/implylestia"], a[href|="/cocowink"], a[href|="/macliquidpride"], a[href|="/disdainforplebs"], a[href|="/flutterdisapprove"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -492,7 +492,7 @@ a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150e 'motes */
-a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"]
+a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"], a[href|="/kittenbloom"]
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -562,7 +562,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -614,7 +614,7 @@ a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"],
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"], a[href|="/kittenbloom"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -790,19 +790,19 @@ a[href|="/twipinkieawe"], a[href|="/implylestia"]
 {background-position: 0 -1800%;}
 
 /* Grid pos 1,18 'motes */
-a[href|="/twipinkiepout"]
+a[href|="/twipinkiepout"], a[href|="/cocowink"]
 {background-position: -100% -1800%;}
 
 /* Grid pos 2,18 'motes */
-a[href|="/twippfear"]
+a[href|="/twippfear"], a[href|="/macliquidpride"]
 {background-position: -200% -1800%;}
 
 /* Grid pos 0,19 'motes */
-a[href|="/pptwicrazy"]
+a[href|="/pptwicrazy"], a[href|="/disdainforplebs"]
 {background-position: 0 -1900%;}
 
 /* Grid pos 1,19 'motes */
-a[href|="/pptwisad"]
+a[href|="/pptwisad"], a[href|="/flutterdisapprove"]
 {background-position: -100% -1900%;}
 
 /* Grid pos 2,19 'motes */
@@ -1281,3 +1281,5 @@ a[href|="/pinkiecannon"] {width:127px;height:200px;background-position: -457px 0
 a[href|="/daringconcerned"] {width:80px;height:150px;background-position: -75px -525px;}
 a[href|="/germandash"], a[href|="/rainbowdeutsch"] {width:124px;height:150px;background-position: -456px -200px;}
 a[href|="/cocoglee"] {width:83px;height:150px;background-position: -584px 0;}
+a[href|="/badgerscratch"] {width:108px;height:150px;background-position: -231px -233px;}
+a[href|="/rddoubletake"] {width:104px;height:120px;background-position: -580px -150px;}
