Stylesheet/emote/tag updates 2015-12-07

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -564,6 +564,10 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-moondancer { background-position: -200% -2500%; }
 .flair-fleetfoot { background-position: -300% -2500%; }
 .flair-beautybrass { background-position: 0 -2600%; }
+.flair-igneousrock { background-position: -100% -2600%; }
+.flair-marblepie { background-position: -200% -2600%; }
+.flair-limestonepie { background-position: -300% -2600%; }
+.flair-rara { background-position: 0 -2700%; }
 
 .flair-strudel {
   width: 32px;
