--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -6,6 +6,30 @@ a[href|="/braescrunch"] {
     height: 144px;
     background-image:url(%%braescrunch%%)
 }
+a[href|="/kat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 197px;
+    background-image:url(%%gembutt%%)
+}
+a[href|="/gembutt"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 197px;
+    background-image:url(%%gembutt%%)
+}
+a[href|="/lilmissrarity"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 106px;
+    height: 170px;
+    background-image:url(%%lmr%%)
+}
 /*a[href|="/flutterbie"] {
     display:block;
     clear:none;
@@ -100,14 +124,7 @@ a[href|="/braewhat"] {
 
 
 
-a[href|="/sombragrin"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 160px;
-    height: 159px;
-    background-image:url(%%sombragrin%%)
-}
+
 
 a[href|="/braesoarhug"] {
     display: block;
