--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -547,6 +547,10 @@ a[href|="/cheesetrot"] {
 .flair-moondancer { background-position: -200% -2500%; }
 .flair-fleetfoot { background-position: -300% -2500%; }
 .flair-beautybrass { background-position: 0 -2600%; }
+.flair-igneousrock { background-position: -100% -2600%; }
+.flair-marblepie { background-position: -200% -2600%; }
+.flair-limestonepie { background-position: -300% -2600%; }
+.flair-rara { background-position: 0 -2700%; }
 
 START-PONYSCRIPT-IGNORE { color: red; }
 
