--- a/source-css/glimmerquisition.css
+++ b/source-css/glimmerquisition.css
@@ -261,7 +261,7 @@ a[href|="/starlightfrench"] {
   background-position: -70px -405px;
 }
 
-a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"], a[href|="/moondancerbook"] {
+a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"], a[href|="/moondancerbook"], a[href|="/moondancercute"], a[href|="/moondancerangry"] {
   float: left;
   display: block;
   height: 70px;
@@ -307,3 +307,15 @@ a[href|="/moondancerbook"] {
   width: 70px;
   background-position: -490px 0;
 }
+
+a[href|="/moondancercute"] {
+  width: 70px;
+  background-position: -560px 0;
+}
+
+a[href|="/moondancerangry"] {
+  width: 70px;
+  background-position: -630px 0;
+}
+
+
