--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -181,7 +181,7 @@ a[href|="/rdsitting"],a[href|="/rdhappy"],a[href|="/rdannoyed"],a[href|="/trixie
 a[href|="/fillytgap"],a[href|="/rdhuh"],a[href|="/snails"],a[href|="/twisad"],a[href|="/lyra"],a[href|="/bonbon"],a[href|="/spitfire"],a[href|="/cutealoo"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/sotrue"],a[href|="/wahaha"],a[href|="/sbstare"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/huhhuh"],a[href|="/absmile"],a[href|="/dealwithit"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/rdsalute"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/colgate"],a[href|="/cheerilee"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/abhuh"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/twiponder"],a[href|="/spikewtf"],a[href|="/awwyeah"],a[href|="/gilda"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/lunamad"],a[href|="/discordsad"],a[href|="/maud"],a[href|="/pinkiepout"],a[href|="/rfillytgap"],a[href|="/rrdhuh"],a[href|="/rsnails"],a[href|="/rtwisad"],a[href|="/rlyra"],a[href|="/rbonbon"],a[href|="/rspitfire"],a[href|="/rcutealoo"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/rsotrue"],a[href|="/rwahaha"],a[href|="/rsbstare"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/rhuhhuh"],a[href|="/rabsmile"],a[href|="/rdealwithit"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/rwhooves"],a[href|="/rrdsalute"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/rcolgate"],a[href|="/rcheerilee"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/rabhuh"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/rtwiponder"],a[href|="/rspikewtf"],a[href|="/rawwyeah"],a[href|="/rgilda"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/rlunamad"],a[href|="/rdiscordsad"],a[href|="/rmaud"],a[href|="/rpinkiepout"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetsneaky"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/scootablue"],a[href|="/orphan"],a[href|="/noparents"],a[href|="/spikehappy"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetsneaky"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rscootablue"],a[href|="/rorphan"],a[href|="/rnoparents"],a[href|="/rspikehappy"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%emotes%%)!important}
 
-a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/scootaeww"],a[href|="/rscootaeww"],a[href|="/discordgrump"],a[href|="/rdiscordgrump"],a[href|="/troubleshoes"],a[href|="/rtroubleshoes"],a[href|="/rdsnrk"],a[href|="/rrdsnrk"],a[href|="/thcalm"],a[href|="/rthcalm"],a[href|="/thc"],a[href|="/rthc"],a[href|="/ooh"],a[href|="/rooh"],a[href|="/pinkieooh"],a[href|="/rpinkieooh"],a[href|="/raritytired"],a[href|="/rraritytired"],a[href|="/notangry"],a[href|="/rnotangry"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],a[href|="/spikewhoa"],a[href|="/rspikewhoa"],a[href|="/spikewoah"],a[href|="/rspikewoah"],a[href|="/justaprankbro"],a[href|="/rjustaprankbro"],a[href|="/wasntme"],a[href|="/rwasntme"],a[href|="/seaswirl"],a[href|="/rseaswirl"],a[href|="/seafoam"],a[href|="/rseafoam"],a[href|="/flimflam"],a[href|="/flim"],a[href|="/rflim"],a[href|="/cocosmile"],a[href|="/rcocosmile"]
+a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/scootaeww"],a[href|="/rscootaeww"],a[href|="/discordgrump"],a[href|="/rdiscordgrump"],a[href|="/troubleshoes"],a[href|="/rtroubleshoes"],a[href|="/rdsnrk"],a[href|="/rrdsnrk"],a[href|="/thcalm"],a[href|="/rthcalm"],a[href|="/thc"],a[href|="/rthc"],a[href|="/ooh"],a[href|="/rooh"],a[href|="/pinkieooh"],a[href|="/rpinkieooh"],a[href|="/raritytired"],a[href|="/rraritytired"],a[href|="/notangry"],a[href|="/rnotangry"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],a[href|="/spikewhoa"],a[href|="/rspikewhoa"],a[href|="/spikewoah"],a[href|="/rspikewoah"],a[href|="/justaprankbro"],a[href|="/rjustaprankbro"],a[href|="/wasntme"],a[href|="/rwasntme"],a[href|="/seaswirl"],a[href|="/rseaswirl"],a[href|="/seafoam"],a[href|="/rseafoam"],a[href|="/flimflam"],a[href|="/flim"],a[href|="/rflim"],a[href|="/cocosmile"],a[href|="/rcocosmile"],a[href|="/skeptiloo"],a[href|="/rskeptiloo"],a[href|="/limestonegrin"],a[href|="/rlimestonegrin"],a[href|="/raritygrump"],a[href|="/rraritygrump"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%fmotes%%)!important}
 
 a[href|="/smooze"],a[href|="/rsmooze"],a[href|="/rapathia"],a[href|="/rflimflam"],a[href|="/flam"],a[href|="/rflam"]
@@ -265,6 +265,9 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-beautybrass
 {background-position:0 -2600%}
 
+.flair-rara
+{background-position:0 -2700%}
+
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],.flair-twilight
 {background-position:-100% 0}
 
@@ -343,6 +346,9 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-babsseed
 {background-position:-100% -2500%}
 
+.flair-igneousrock
+{background-position:-100% -2600%}
+
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],.flair-fluttershy
 {background-position:-200% 0}
 
@@ -361,13 +367,13 @@ a[href|="/squintyjack"],a[href|="/rsquintyjack"],a[href|="/joy"],a[href|="/rjoy"
 a[href|="/rdcry"],a[href|="/rrdcry"],a[href|="/dumbfabric"],a[href|="/rdumbfabric"],a[href|="/derp"],a[href|="/rderp"],a[href|="/rdsalute"],a[href|="/rrdsalute"],a[href|="/cocosmile"],a[href|="/rcocosmile"],.flair-seafoam
 {background-position:-200% -500%}
 
-a[href|="/abbored"],a[href|="/abmerp"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/rarityannoyed"],a[href|="/rrarityannoyed"],a[href|="/derpyshock"],a[href|="/rderpyshock"],a[href|="/cheerilee"],a[href|="/rcheerilee"],.flair-caramel
+a[href|="/abbored"],a[href|="/abmerp"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/rarityannoyed"],a[href|="/rrarityannoyed"],a[href|="/derpyshock"],a[href|="/rderpyshock"],a[href|="/cheerilee"],a[href|="/rcheerilee"],a[href|="/skeptiloo"],a[href|="/rskeptiloo"],.flair-caramel
 {background-position:-200% -600%}
 
-a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/raritywhine"],a[href|="/rraritywhine"],a[href|="/lunagasp"],a[href|="/rlunagasp"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/rlily"],a[href|="/rthehorror"],.flair-scootaloo
+a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/raritywhine"],a[href|="/rraritywhine"],a[href|="/lunagasp"],a[href|="/rlunagasp"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/limestonegrin"],a[href|="/rlimestonegrin"],.flair-scootaloo
 {background-position:-200% -700%}
 
-a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/cockatrice"],a[href|="/rcockatrice"],a[href|="/angel"],a[href|="/rangel"],a[href|="/awwyeah"],a[href|="/rawwyeah"],.flair-cheerilee
+a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/cockatrice"],a[href|="/rcockatrice"],a[href|="/angel"],a[href|="/rangel"],a[href|="/awwyeah"],a[href|="/rawwyeah"],a[href|="/raritygrump"],a[href|="/rraritygrump"],.flair-cheerilee
 {background-position:-200% -800%}
 
 a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/twirage"],a[href|="/rtwirage"],a[href|="/photofinish"],a[href|="/rphotofinish"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/rmacintears"],a[href|="/rbigmactears"],.flair-mrcake
@@ -420,6 +426,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 
 .flair-moondancer
 {background-position:-200% -2500%}
+
+.flair-marblepie
+{background-position:-200% -2600%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack
 {background-position:-300% 0}
@@ -495,6 +504,9 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 .flair-fleetfoot
 {background-position:-300% -2500%}
+
+.flair-limestonepie
+{background-position:-300% -2600%}
 
 /*---------------- END COPY ----------------*/
 
