--- a/minified-css/ponycountdown.css
+++ b/minified-css/ponycountdown.css
@@ -1,1 +1,1 @@
-a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//b.thumbs.redditmedia.com/LTHBgq-w3TcVqa8hx-NUbsDMWb-p7p1RFQoDl5181us.png")}
+a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//a.thumbs.redditmedia.com/BVGg0_HoZFxiNjj8BFRuz7oZfcwcCu6J6SQ1ztkkQi0.png")}
