--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -1,12 +1,3 @@
-/*Place announcements here, uncomment and put announcement into the content field*/
-/* Recomment code to hide announcement box*/
-    /*.pagename a:before{
-        content:"Hello World this is located in the CSS.";
-	    font-variant:normal!important;
-    	background-image: url(%%AutoModFlair%%)!important;
-        background:black;
-        
-    }*/
 
 /* Re-design and related assets by /u/0megaRidley */
 /* https://redd.it/3rtuqw */
@@ -228,7 +219,7 @@ body .content {
 /*subreddit Header field end*/
 
 /* userbar */
-#header-bottom-right {
+#header-bottom-right, .res-nightmode #header-bottom-right {
   top: 88px!important;
   bottom: 52px!important;
   /*opacity: 0.3;*/
@@ -480,6 +471,11 @@ body.res-nightmode .submit .morelink a:before{margin-left:0px;}
   border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #fff) 100% 1;
 }
 
+.res-nightmode .side {
+			  -moz-border-image: -moz-linear-gradient(rgba(0, 0, 0, 0), rgb(34, 34, 34)) 100% 1;
+			  border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(34, 34, 34)) 100% 1;
+			}
+
 /* doesn't work at all
 .side:after {
   content: "";
@@ -510,7 +506,7 @@ body.res-nightmode .submit .morelink a:before{margin-left:0px;}
 }
 
 /*sidebar image*/
-.side .titlebox h1 a, .side .titlebox h1 a:link .side .titlebox h1 a:visited {
+.side .titlebox h1 a, .side .titlebox h1 a:link .side .titlebox h1 a:visited, .res-nightmode .side .titlebox h1 a, .res-nightmode .side .titlebox h1 a:link .side .titlebox h1 a:visited {
   color: transparent;
   background: url(%%titlecard-v04%%) no-repeat;
   height: 144px;
@@ -556,7 +552,7 @@ div.titlebox .users-online span.number:after {content: " fighting the good fight
 }
 
 /* link color adjustment */
-.side a {
+.side a, .res-nightmode .side a {
   color: #3d3; /* high contrast on dark background */
 }
 
@@ -575,7 +571,8 @@ code {
 .spacer .content, .RES-keyNav-activeElement {
   background-image: url(%%backgroundtexture%%);
 }
-
+.res-nightmode .spacer .content, .res-nightmode .RES-keyNav-activeElement {
+			}
 .spacer .content a {
   color: #2b2b2b; /* links are light color, so this reverts them to a dark one so they contrast on our background texture */
 }
@@ -592,6 +589,10 @@ code {
   height: 39px;
   width: 296px;
   display: block;
+}
+			/* fix for faint shadow in sidebar search flairs (pip and bj) */
+			.side .md [href*="search?q=flair%3Apip"], .side .md [href*="search?q=flair%3Abj"] {
+			  text-shadow: none;
 }
     
 /*Sidebar field end*/
@@ -662,30 +663,28 @@ ul.tabmenu.formtab {
 
 .submit-page .selected a { border: 1px solid #000!important; }
 
-.tabmenu.formtab li:first-of-type a {
+.tabmenu.formtab li a, .res-nightmode .submit-page .submit .formtab .selected a{
   background-image: url(%%submission-tabs-v01%%);
-  background-position: 0 -37px;
-}
-.tabmenu.formtab .selected:first-of-type a, .tabmenu.formtab li:first-of-type a:hover {
-  background-image: url(%%submission-tabs-v01%%);
-  background-position: -386px -37px;
-}
-.tabmenu.formtab li:first-of-type a:active {
-  background-image: url(%%submission-tabs-v01%%);
-  background-position: -193px -37px;
 }
 
-.tabmenu.formtab li a {
-  background-image: url(%%submission-tabs-v01%%);
+.tabmenu.formtab li:first-of-type a, .res-nightmode .tabmenu.formtab li:first-of-type a {
+  background-position: 0 -37px;
+}
+.tabmenu.formtab .selected:first-of-type a, .tabmenu.formtab li:first-of-type a:hover, .res-nightmode .tabmenu.formtab .selected:first-of-type a, .res-nightmode .tabmenu.formtab li:first-of-type a:hover {
+  background-position: -386px -37px!important;
+}
+.tabmenu.formtab li:first-of-type a:active, .res-nightmode .tabmenu.formtab li:first-of-type a:active {
+  background-position: -193px -37px!important;
+}
+
+.tabmenu.formtab li a, .res-nightmode .tabmenu.formtab li a {
   background-position: 0 0;
 }
-.tabmenu.formtab .selected a, .tabmenu.formtab li a:hover {
-  background-image: url(%%submission-tabs-v01%%);
-  background-position: -386px 0;
+.tabmenu.formtab .selected a, .tabmenu.formtab li a:hover, .res-nightmode .tabmenu.formtab .selected a, .res-nightmode .tabmenu.formtab li a:hover {
+  background-position: -386px 0!important;
 }
-.tabmenu.formtab li a:active {
-  background-image: url(%%submission-tabs-v01%%);
-  background-position: -193px 0;
+.tabmenu.formtab li a:active, .res-nightmode .tabmenu.formtab li a:active {
+  background-position: -193px 0!important;
 }
 
 .submit-page .content h1 {
@@ -736,6 +735,32 @@ ul.tabmenu.formtab {
 }
 
 /* End of footer */
+
+/*************** RES NIGHT MODE TWEAKS *************************/
+			
+			/* submit text on hover */
+			.res-nightmode .morelink {
+			  text-indent: -99999em;
+			}
+			
+			/* background on sidebar elements */
+			.res-nightmode .side .titlebox, .res-nightmode .side .md ul, .res-nightmode .side .md, .res-nightmode .icon-menu a, .res-nightmode .side .spacer .titlebox .redditname, .res-nightmode .side .titlebox .flairtoggle, .res-nightmode .side .titlebox form.flairtoggle {
+			  background: none;
+			}
+			
+			/* text color fix */
+			.res-nightmode .spacer .content a {
+			  color: #ccc;
+			}
+			
+			/* mod boxes and recently viewed background fix */
+			.res-nightmode .roundfield, .res-nightmode .spacer .content, .res-nightmode .RES-keyNav-activeElement, .res-nightmode .linkinfo {
+			  background-image: none;
+			}
+			
+			
+			/************** END OF RES NIGHT MODE TWEAKS *******************/
+
 
 a[href|="/sp"] {
 	display: inline-block;
