--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -34,8 +34,8 @@
 
 
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Punkins Lawnched In"}
-div.titlebox .users-online span.number:after {content:" Yurs Of Fightin'"}
+div.titlebox .subscribers span.number:after {content:" Fanfics Confirmed"}
+div.titlebox .users-online span.number:after {content:" Survivors Of The Epic Pony War"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -171,14 +171,14 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%twipbbt%%);
+ background:url(%%amotes%%);
  width:70px;
  height:70px;
  margin-top:-45px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-45px;
- background-position:-200% -500%; /*To select emote table position. Increments of -100%.*/
+ margin-right:-50px;
+ background-position:-200% -300%; /*To select emote table position. Increments of -100%.*/
  transform:scaleX(-1); /*To reverse the hat. '1' is normal, '-1' is reversed.*/
 }
 
@@ -670,12 +670,12 @@ a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[hr
     cursor: default;
 }
 
-a[href|="/f00"], a[href|="/pinkiesad"], a[href|="/ppsad"], a[href|="/f01"], a[href|="/diamondtiara"], a[href|="/dt"], a[href|="/f02"], a[href|="/sombra"], a[href|="/f03"], a[href|="/sbshocked"], a[href|="/f04"], a[href|="/guard"], a[href|="/f05"], a[href|="/abstern"], a[href|="/f06"], a[href|="/apathia"], a[href|="/f07"], a[href|="/ajcry"], a[href|="/f08"], a[href|="/rarityeww"], a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"], a[href|="/f10"], a[href|="/starlightrage"], a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"], a[href|="/f12"], a[href|="/scootaeww"], a[href|="/f13"], a[href|="/discordgrump"], a[href|="/f14"], a[href|="/troubleshoes"], a[href|="/f15"], a[href|="/rdsnrk"], a[href|="/f16"], a[href|="/thcalm"], a[href|="/thc"], a[href|="/f17"], a[href|="/ooh"], a[href|="/pinkieooh"], a[href|="/f18"], a[href|="/raritytired"], a[href|="/f19"], a[href|="/notangry"], a[href|="/f20"], a[href|="/ajdoubt"], a[href|="/f21"], a[href|="/spikewhoa"], a[href|="/spikewoah"], a[href|="/justaprankbro"], a[href|="/f22"], a[href|="/wasntme"],a[href|="/seaswirl"], a[href|="/seafoam"], a[href|="/f24"], a[href|="/flimflam"], a[href|="/flim"], a[href|="/f25"], a[href|="/cocosmile"], a[href|="/f26"], a[href|="/skeptiloo"], a[href|="/f27"], a[href|="/limestonegrin"], a[href|="/f28"], a[href|="/raritygrump"]
+a[href|="/f00"], a[href|="/pinkiesad"], a[href|="/ppsad"], a[href|="/f01"], a[href|="/diamondtiara"], a[href|="/dt"], a[href|="/f02"], a[href|="/sombra"], a[href|="/f03"], a[href|="/sbshocked"], a[href|="/f04"], a[href|="/guard"], a[href|="/f05"], a[href|="/abstern"], a[href|="/f06"], a[href|="/apathia"], a[href|="/f07"], a[href|="/ajcry"], a[href|="/f08"], a[href|="/rarityeww"], a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"], a[href|="/f10"], a[href|="/starlightrage"], a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"], a[href|="/f12"], a[href|="/scootaeww"], a[href|="/f13"], a[href|="/discordgrump"], a[href|="/f14"], a[href|="/troubleshoes"], a[href|="/f15"], a[href|="/rdsnrk"], a[href|="/f16"], a[href|="/thcalm"], a[href|="/thc"], a[href|="/f17"], a[href|="/ooh"], a[href|="/pinkieooh"], a[href|="/f18"], a[href|="/raritytired"], a[href|="/f19"], a[href|="/notangry"], a[href|="/f20"], a[href|="/ajdoubt"], a[href|="/f21"], a[href|="/spikewhoa"], a[href|="/spikewoah"], a[href|="/justaprankbro"], a[href|="/f22"], a[href|="/wasntme"],a[href|="/seaswirl"], a[href|="/seafoam"], a[href|="/f24"], a[href|="/flimflam"], a[href|="/flim"], a[href|="/f25"], a[href|="/cocosmile"], a[href|="/f26"], a[href|="/skeptiloo"], a[href|="/f27"], a[href|="/limestonegrin"], a[href|="/f28"], a[href|="/raritygrump"], a[href|="/f29"], a[href|="/goodjob"], a[href|="/starlightgoodjob"], a[href|="/starlightgj"], a[href|="/f30"], a[href|="/flutterhay"], a[href|="/f31"], a[href|="/sbwtf"], a[href|="/f32"], a[href|="/nightmaregrin"], a[href|="/f33"], a[href|="/spikeapproves"], a[href|="/f34"], a[href|="/flutternice"], a[href|="/flutterheadtilt"], a[href|="/f35"], a[href|="/ppdont"], a[href|="/pinkiedont"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%fmotes%%)!important;
     cursor: default;
 }
 
-a[href|="/rf00"], a[href|="/rpinkiesad"], a[href|="/rppsad"], a[href|="/rf01"], a[href|="/rdiamondtiara"], a[href|="/rdt"], a[href|="/rf02"], a[href|="/rsombra"], a[href|="/rf03"], a[href|="/rsbshocked"], a[href|="/rf04"], a[href|="/rguard"], a[href|="/rf05"], a[href|="/rabstern"], a[href|="/rf06"], a[href|="/rf07"], a[href|="/rajcry"], a[href|="/rf08"], a[href|="/rrarityeww"], a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"], a[href|="/rf10"], a[href|="/rstarlightrage"], a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"], a[href|="/rf12"], a[href|="/rscootaeww"], a[href|="/rf13"], a[href|="/rdiscordgrump"], a[href|="/rf14"], a[href|="/rtroubleshoes"], a[href|="/rf15"], a[href|="/rrdsnrk"], a[href|="/rf16"], a[href|="/rthcalm"], a[href|="/rthc"], a[href|="/rf17"], a[href|="/rooh"], a[href|="/rpinkieooh"], a[href|="/rf18"], a[href|="/rraritytired"], a[href|="/rf19"], a[href|="/rnotangry"], a[href|="/rf20"], a[href|="/rajdoubt"], a[href|="/rf21"], a[href|="/rspikewhoa"],a[href|="/rspikewoah"], a[href|="/rjustaprankbro"], a[href|="/rf22"], a[href|="/rwasntme"],a[href|="/rseaswirl"],a[href|="/rseafoam"],a[href|="/rflim"], a[href|="/rf25"], a[href|="/rcocosmile"], a[href|="/rf26"], a[href|="/rskeptiloo"], a[href|="/rf27"], a[href|="/rlimestonegrin"], a[href|="/rf28"], a[href|="/rraritygrump"]
+a[href|="/rf00"], a[href|="/rpinkiesad"], a[href|="/rppsad"], a[href|="/rf01"], a[href|="/rdiamondtiara"], a[href|="/rdt"], a[href|="/rf02"], a[href|="/rsombra"], a[href|="/rf03"], a[href|="/rsbshocked"], a[href|="/rf04"], a[href|="/rguard"], a[href|="/rf05"], a[href|="/rabstern"], a[href|="/rf06"], a[href|="/rf07"], a[href|="/rajcry"], a[href|="/rf08"], a[href|="/rrarityeww"], a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"], a[href|="/rf10"], a[href|="/rstarlightrage"], a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"], a[href|="/rf12"], a[href|="/rscootaeww"], a[href|="/rf13"], a[href|="/rdiscordgrump"], a[href|="/rf14"], a[href|="/rtroubleshoes"], a[href|="/rf15"], a[href|="/rrdsnrk"], a[href|="/rf16"], a[href|="/rthcalm"], a[href|="/rthc"], a[href|="/rf17"], a[href|="/rooh"], a[href|="/rpinkieooh"], a[href|="/rf18"], a[href|="/rraritytired"], a[href|="/rf19"], a[href|="/rnotangry"], a[href|="/rf20"], a[href|="/rajdoubt"], a[href|="/rf21"], a[href|="/rspikewhoa"],a[href|="/rspikewoah"], a[href|="/rjustaprankbro"], a[href|="/rf22"], a[href|="/rwasntme"],a[href|="/rseaswirl"],a[href|="/rseafoam"],a[href|="/rflim"], a[href|="/rf25"], a[href|="/rcocosmile"], a[href|="/rf26"], a[href|="/rskeptiloo"], a[href|="/rf27"], a[href|="/rlimestonegrin"], a[href|="/rf28"], a[href|="/rraritygrump"], a[href|="/rf29"], a[href|="/rgoodjob"], a[href|="/rstarlightgoodjob"], a[href|="/rstarlightgj"], a[href|="/rf30"], a[href|="/rflutterhay"], a[href|="/rf31"], a[href|="/rsbwtf"], a[href|="/rf32"], a[href|="/rnightmaregrin"], a[href|="/rf33"], a[href|="/rspikeapproves"], a[href|="/rf34"], a[href|="/rflutternice"], a[href|="/rflutterheadtilt"], a[href|="/rf35"], a[href|="/rppdont"], a[href|="/rpinkiedont"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%fmotes%%)!important;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
@@ -862,7 +862,7 @@ a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="
 a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/a28"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra28"],a[href|="/cockatrice"],a[href|="/b28"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/angel"],a[href|="/c28"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/awwyeah"],a[href|="/e28"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/f28"],a[href|="/raritygrump"],a[href|="/rf28"],a[href|="/rraritygrump"],.flair-cheerilee,.side .md table tr:nth-of-type(17) td:nth-of-type(4):after
 {background-position:-200% -800%}
 
-a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/a29"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/ra29"],a[href|="/twirage"],a[href|="/b29"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/photofinish"],a[href|="/c29"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/e29"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"],.flair-mrcake,.side .md table tr:nth-of-type(19) td:nth-of-type(4):after
+a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/a29"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/ra29"],a[href|="/twirage"],a[href|="/b29"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/photofinish"],a[href|="/c29"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/e29"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"],a[href|="/f29"],a[href|="/goodjob"],a[href|="/starlightgoodjob"],a[href|="/starlightgj"],a[href|="/rf29"],a[href|="/rgoodjob"],a[href|="/rstarlightgoodjob"],a[href|="/rstarlightgj"],.flair-mrcake,.side .md table tr:nth-of-type(19) td:nth-of-type(4):after
 {background-position:-200% -900%}
 
 .flair-silverspoon
@@ -904,22 +904,22 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-bulkbiceps
 {background-position:-200% -2200%}
 
-a[href|="/flutterroll"],a[href|="/a30"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/twisad"],a[href|="/e30"],a[href|="/rtwisad"],a[href|="/re30"],.flair-applejack,.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
+a[href|="/flutterroll"],a[href|="/a30"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/twisad"],a[href|="/e30"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/f30"],a[href|="/flutterhay"],a[href|="/rf30"],a[href|="/rflutterhay"],.flair-applejack,.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
 {background-position:-300% 0}
 
-a[href|="/spikemeh"],a[href|="/a31"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/changeling"],a[href|="/c31"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/e31"],a[href|="/lunamad"],a[href|="/re31"],a[href|="/rlunamad"],.flair-cmc,.flair-cmcchinchy,.side .md table tr:nth-of-type(3) td:nth-of-type(5):after
+a[href|="/spikemeh"],a[href|="/a31"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/changeling"],a[href|="/c31"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/e31"],a[href|="/lunamad"],a[href|="/re31"],a[href|="/rlunamad"],a[href|="/f31"],a[href|="/sbwtf"],a[href|="/rf31"],a[href|="/rsbwtf"],.flair-cmc,.flair-cmcchinchy,.side .md table tr:nth-of-type(3) td:nth-of-type(5):after
 {background-position:-300% -100%}
 
-a[href|="/abmeh"],a[href|="/a32"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/e32"], a[href|="/discordsad"],a[href|="/re32"], a[href|="/rdiscordsad"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(5):after
+a[href|="/abmeh"],a[href|="/a32"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/e32"], a[href|="/discordsad"],a[href|="/re32"], a[href|="/rdiscordsad"],a[href|="/f32"],a[href|="/nightmaregrin"],a[href|="/rf32"],a[href|="/rnightmaregrin"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(5):after
 {background-position:-300% -200%}
 
-a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a33"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/rtwidaw"],a[href|="/twidaww"],a[href|="/rtwidaww"],a[href|="/rc33"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/e33"], a[href|="/maud"],a[href|="/re33"], a[href|="/rmaud"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(5):after
+a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a33"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/rtwidaw"],a[href|="/twidaww"],a[href|="/rtwidaww"],a[href|="/rc33"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/e33"], a[href|="/maud"],a[href|="/re33"], a[href|="/rmaud"],a[href|="/f33"],a[href|="/spikeapproves"],a[href|="/rf33"],a[href|="/rspikeapproves"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(5):after
 {background-position:-300% -300%}
 
-a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a34"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/e34"], a[href|="/pinkiepout"],a[href|="/re34"], a[href|="/rpinkiepout"],.flair-pokey,.side .md table tr:nth-of-type(9) td:nth-of-type(5):after
+a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a34"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/e34"], a[href|="/pinkiepout"],a[href|="/re34"], a[href|="/rpinkiepout"],a[href|="/f34"],a[href|="/flutternice"],a[href|="/flutterheadtilt"],a[href|="/rf34"],a[href|="/rflutternice"],a[href|="/rflutterheadtilt"],.flair-pokey,.side .md table tr:nth-of-type(9) td:nth-of-type(5):after
 {background-position:-300% -400%}
 
-a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/a35"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/c35"],a[href|="/rc35"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/e35"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/re35"],.flair-carrottop,.side .md table tr:nth-of-type(11) td:nth-of-type(5):after
+a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/a35"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/c35"],a[href|="/rc35"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/e35"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/re35"],a[href|="/f35"],a[href|="/ppdont"],a[href|="/pinkiedont"],a[href|="/rf35"],a[href|="/rppdont"],a[href|="/rpinkiedont"],.flair-carrottop,.side .md table tr:nth-of-type(11) td:nth-of-type(5):after
 {background-position:-300% -500%}
 
 a[href|="/rarityreally"],a[href|="/a36"],a[href|="/rrarityreally"],a[href|="/ra36"],a[href|="/soawesome"],a[href|="/b36"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/shiningpride"],a[href|="/c36"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/e36"],a[href|="/re36"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],.flair-braeburn,.side .md table tr:nth-of-type(13) td:nth-of-type(5):after
@@ -994,7 +994,7 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-cmcsparroew {background-position: -300% -100%}
 .flair-cmcsparroew:hover {background-position: -0% -200%}
 .flair-cmcaroelen {background-position: -300% -100%}
-.flair-cmcaroelen:hover {background-position: -300% -1000%}
+.flair-cmcaroelen:hover {background-position: -0% -2000%}
 
 table tr td:first-child {width:14px}
 
@@ -1331,6 +1331,13 @@ table tr td:first-child {width:14px}
 .side .md table:nth-of-type(5) tr:nth-of-type(14) td:nth-of-type(4):after{content:"skeptiloo"}
 .side .md table:nth-of-type(5) tr:nth-of-type(16) td:nth-of-type(4):after{content:"limestonegrin"}
 .side .md table:nth-of-type(5) tr:nth-of-type(18) td:nth-of-type(4):after{content:"raritygrump"}
+.side .md table:nth-of-type(5) tr:nth-of-type(20) td:nth-of-type(4):after{content:"goodjob"}
+.side .md table:nth-of-type(5) tr:nth-of-type(2) td:nth-of-type(5):after{content:"flutterhay"}
+.side .md table:nth-of-type(5) tr:nth-of-type(4) td:nth-of-type(5):after{content:"sbwtf"}
+.side .md table:nth-of-type(5) tr:nth-of-type(6) td:nth-of-type(5):after{content:"nightmaregrin"}
+.side .md table:nth-of-type(5) tr:nth-of-type(8) td:nth-of-type(5):after{content:"spikeapproves"}
+.side .md table:nth-of-type(5) tr:nth-of-type(10) td:nth-of-type(5):after{content:"flutternice"}
+.side .md table:nth-of-type(5) tr:nth-of-type(12) td:nth-of-type(5):after{content:"ppdont"}
 body:not(.moderator) div.content .flairselectbtn
 {
  content:""!important;
