--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -460,7 +460,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/buzzlestia"], a[href|="/cloudkicker"], a[href|="/bigmacgrin"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/implylestia"], a[href|="/cocowink"], a[href|="/macliquidpride"], a[href|="/disdainforplebs"], a[href|="/flutterdisapprove"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/buzzlestia"], a[href|="/cloudkicker"], a[href|="/bigmacgrin"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/implylestia"], a[href|="/cocowink"], a[href|="/macliquidpride"], a[href|="/disdainforplebs"], a[href|="/flutterdisapprove"], a[href|="/bookseller"], a[href|="/daringshrug"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -562,7 +562,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"], a[href|="/dashcookiejar"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -670,7 +670,7 @@ a[href|="/wowsocane"], a[href|="/rdtwibeam"], a[href|="/apathiashrug"], a[href|=
 {background-position: -0% -800%;}
 
 /* Grid pos 1,8 'motes */
-a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/flutterheadtilt"], a[href|="/vinyllook"]
+a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/vinyllook"]
 {background-position: -100% -800%;}
 
 /* Grid pos 2,8 'motes */
@@ -806,11 +806,11 @@ a[href|="/pptwisad"], a[href|="/flutterdisapprove"]
 {background-position: -100% -1900%;}
 
 /* Grid pos 2,19 'motes */
-a[href|="/pptwistare"]
+a[href|="/pptwistare"], a[href|="/bookseller"]
 {background-position: -200% -1900%;}
 
 /* Grid pos 0,20 'motes */
-a[href|="/rarirdhappy"]
+a[href|="/rarirdhappy"], a[href|="/daringshrug"]
 {background-position: 0 -2000%;}
 
 /* Grid pos 1,20 'motes */
@@ -1283,3 +1283,4 @@ a[href|="/germandash"], a[href|="/rainbowdeutsch"] {width:124px;height:150px;bac
 a[href|="/cocoglee"] {width:83px;height:150px;background-position: -584px 0;}
 a[href|="/badgerscratch"] {width:108px;height:150px;background-position: -231px -233px;}
 a[href|="/rddoubletake"] {width:104px;height:120px;background-position: -580px -150px;}
+a[href|="/dashcookiejar"] {width:67px;height:150px;background-position: -339px -315px;}
