Stylesheet/emote/tag updates 2015-12-20

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -551,23 +551,31 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-troubleshoes { background-position: 0 -2200%; }
 .flair-screwloose { background-position: -100% -2200%; }
 .flair-bulkbiceps { background-position: -200% -2200%; }
-.flair-surprise { background-position: 0 -2300%; }
-.flair-snowdrop { background-position: -100% -2300%; }
-.flair-lightning { background-position: -200% -2300%; }
-.flair-peachbottom { background-position: -300% -2300%; }
-.flair-harshwhinny { background-position: 0 -2400%; }
-.flair-adagiodazzle { background-position: -100% -2400%; }
-.flair-ariablaze { background-position: -200% -2400%; }
-.flair-sonatadusk { background-position: -300% -2400%; }
-.flair-raindrops { background-position: 0 -2500%; }
-.flair-babsseed { background-position: -100% -2500%; }
-.flair-moondancer { background-position: -200% -2500%; }
-.flair-fleetfoot { background-position: -300% -2500%; }
-.flair-beautybrass { background-position: 0 -2600%; }
-.flair-igneousrock { background-position: -100% -2600%; }
-.flair-marblepie { background-position: -200% -2600%; }
-.flair-limestonepie { background-position: -300% -2600%; }
-.flair-rara { background-position: 0 -2700%; }
+.flair-photofinish { background-position: 0 -2300%; }
+.flair-lightningdust { background-position: -100% -2300%; }
+.flair-babsseed { background-position: -200% -2300%; }
+.flair-cherryjubilee { background-position: -300% -2300%; }
+.flair-adagiodazzle { background-position: 0 -2400%; }
+.flair-ariablaze { background-position: -100% -2400%; }
+.flair-sonatadusk { background-position: -200% -2400%; }
+.flair-moondancer { background-position: -300% -2400%; }
+.flair-igneousrock { background-position: 0 -2500%; }
+.flair-cloudyquartz { background-position: -100% -2500%; }
+.flair-limestonepie { background-position: -200% -2500%; }
+.flair-marblepie { background-position: -300% -2500%; }
+.flair-coloratura { background-position: 0 -2600%; }
+.flair-indigozap { background-position: -100% -2600%; }
+.flair-lemonzest { background-position: -200% -2600%; }
+.flair-soursweet { background-position: -300% -2600%; }
+.flair-sugarcoat { background-position: 0 -2700%; }
+.flair-sunnyflare { background-position: -100% -2700%; }
+.flair-surprise { background-position: 0 -2800%; }
+.flair-snowdrop { background-position: -100% -2800%; }
+.flair-peachbottom { background-position: -200% -2800%; }
+.flair-harshwhinny { background-position: -300% -2800%; }
+.flair-raindrops { background-position: 0 -2900%; }
+.flair-fleetfoot { background-position: -100% -2900%; }
+.flair-beautybrass { background-position: -200% -2900%; }
 
 .flair-strudel {
   width: 32px;
