--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -477,8 +477,8 @@ a[href|="/vanal"], a[href|="/creamparty"], a[href|="/vsdrip"], a[href|="/kittieb
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/scootabutt"], a[href|="/rubydrip"], a[href|="/trixiespread"]
-{background-image:url(%%misfitsp%%);display:block;float:left;}
+a[href|="/scootabutt"], a[href|="/rubydrip"], a[href|="/trixiespread"], a[href|="/braeburnrope"] 
+{background-image:url(%%misfitsp%%);display:block;float:left;} 
 
 
 /* Animated Emotes */
@@ -610,5 +610,5 @@ a[href|="/abpresenting"] {width: 200px;height:190px;background-position: -200px 
 a[href|="/scootabutt"] {width: 200px;height:191px;background-position: 0px -0px;}
 a[href|="/rubydrip"] {width: 184px;height:200px;background-position: -200px -0px;}
 a[href|="/trixiespread"] {width: 227px;height:250px;background-position: 0px -200px;}
-a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
+a[href|="/braeburnrope"] {width: 200px;height:164px;background-position: 0px -452px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
