--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -382,7 +382,7 @@ a[href|="/rdsitting"],a[href|="/rdhappy"],a[href|="/rdannoyed"],a[href|="/trixie
 a[href|="/fillytgap"],a[href|="/rdhuh"],a[href|="/snails"],a[href|="/twisad"],a[href|="/lyra"],a[href|="/bonbon"],a[href|="/spitfire"],a[href|="/cutealoo"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/sotrue"],a[href|="/wahaha"],a[href|="/sbstare"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/huhhuh"],a[href|="/absmile"],a[href|="/dealwithit"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/rdsalute"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/colgate"],a[href|="/cheerilee"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/abhuh"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/twiponder"],a[href|="/spikewtf"],a[href|="/awwyeah"],a[href|="/gilda"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/lunamad"],a[href|="/discordsad"],a[href|="/maud"],a[href|="/pinkiepout"],a[href|="/rfillytgap"],a[href|="/rrdhuh"],a[href|="/rsnails"],a[href|="/rtwisad"],a[href|="/rlyra"],a[href|="/rbonbon"],a[href|="/rspitfire"],a[href|="/rcutealoo"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/rsotrue"],a[href|="/rwahaha"],a[href|="/rsbstare"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/rhuhhuh"],a[href|="/rabsmile"],a[href|="/rdealwithit"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/rwhooves"],a[href|="/rrdsalute"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/rcolgate"],a[href|="/rcheerilee"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/rabhuh"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/rtwiponder"],a[href|="/rspikewtf"],a[href|="/rawwyeah"],a[href|="/rgilda"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/rlunamad"],a[href|="/rdiscordsad"],a[href|="/rmaud"],a[href|="/rpinkiepout"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetsneaky"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/scootablue"],a[href|="/orphan"],a[href|="/noparents"],a[href|="/spikehappy"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetsneaky"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rscootablue"],a[href|="/rorphan"],a[href|="/rnoparents"],a[href|="/rspikehappy"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%emotes%%)!important}
 
-a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/scootaeww"],a[href|="/discordgrump"],a[href|="/troubleshoes"],a[href|="/rdsnrk"],a[href|="/thcalm"],a[href|="/thc"],a[href|="/ooh"],a[href|="/pinkieooh"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/rscootaeww"],a[href|="/rdiscordgrump"],a[href|="/rtroubleshoes"],a[href|="/rrdsnrk"],a[href|="/rthcalm"],a[href|="/rthc"],a[href|="/rooh"],a[href|="/rpinkieooh"],a[href|="/raritytired"],a[href|="/rraritytired"],a[href|="/notangry"],a[href|="/rnotangry"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],a[href|="/spikewhoa"],a[href|="/rspikewhoa"],a[href|="/spikewoah"],a[href|="/rspikewoah"],a[href|="/justaprankbro"],a[href|="/rjustaprankbro"],a[href|="/wasntme"],a[href|="/rwasntme"],a[href|="/seaswirl"],a[href|="/rseaswirl"],a[href|="/seafoam"],a[href|="/rseafoam"],a[href|="/flimflam"],a[href|="/flim"],a[href|="/rflim"],a[href|="/cocosmile"],a[href|="/rcocosmile"],,a[href|="/skeptiloo"],a[href|="/rskeptiloo"],a[href|="/limestonegrin"],a[href|="/rlimestonegrin"],a[href|="/raritygrump"],a[href|="/rraritygrump"]
+a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/scootaeww"],a[href|="/discordgrump"],a[href|="/troubleshoes"],a[href|="/rdsnrk"],a[href|="/thcalm"],a[href|="/thc"],a[href|="/ooh"],a[href|="/pinkieooh"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/rscootaeww"],a[href|="/rdiscordgrump"],a[href|="/rtroubleshoes"],a[href|="/rrdsnrk"],a[href|="/rthcalm"],a[href|="/rthc"],a[href|="/rooh"],a[href|="/rpinkieooh"],a[href|="/raritytired"],a[href|="/rraritytired"],a[href|="/notangry"],a[href|="/rnotangry"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],a[href|="/spikewhoa"],a[href|="/rspikewhoa"],a[href|="/spikewoah"],a[href|="/rspikewoah"],a[href|="/justaprankbro"],a[href|="/rjustaprankbro"],a[href|="/wasntme"],a[href|="/rwasntme"],a[href|="/seaswirl"],a[href|="/rseaswirl"],a[href|="/seafoam"],a[href|="/rseafoam"],a[href|="/flimflam"],a[href|="/flim"],a[href|="/rflim"],a[href|="/cocosmile"],a[href|="/rcocosmile"],,a[href|="/skeptiloo"],a[href|="/rskeptiloo"],a[href|="/limestonegrin"],a[href|="/rlimestonegrin"],a[href|="/raritygrump"],a[href|="/rraritygrump"],a[href|="/goodjob"],a[href|="/rgoodjob"],a[href|="/starlightgoodjob"],a[href|="/rstarlightgoodjob"],a[href|="/starlightgj"],a[href|="/rstarlightgj"],a[href|="/flutterhay"],a[href|="/rflutterhay"],a[href|="/sbwtf"],a[href|="/rsbwtf"],a[href|="/nightmaregrin"],a[href|="/rnightmaregrin"],a[href|="/spikeapproves"],a[href|="/rspikeapproves"],a[href|="/flutternice"],a[href|="/rflutternice"],a[href|="/flutterheadtilt"],a[href|="/rflutterheadtilt"],a[href|="/ppdont"],a[href|="/rppdont"],a[href|="/pinkiedont"],a[href|="/rpinkiedont"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%fmotes%%)!important}
 
 a[href|="/smooze"],a[href|="/rsmooze"],a[href|="/rapathia"],a[href|="/rflimflam"],a[href|="/flam"],a[href|="/rflam"]
@@ -454,20 +454,26 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-troubleshoes
 {background-position:0 -2200%}
 
-.flair-surprise
+.flair-photofinish
 {background-position:0 -2300%}
 
-.flair-harshwhinny
+.flair-adagiodazzle
 {background-position:0 -2400%}
 
-.flair-raindrops
+.flair-igneousrock
 {background-position:0 -2500%}
 
-.flair-beautybrass
+.flair-coloratura
 {background-position:0 -2600%}
 
-.flair-rara
+.flair-sugarcoat
 {background-position:0 -2700%}
+
+.flair-surprise
+{background-position:0 -2800%}
+
+.flair-raindrops
+{background-position:0 -2900%}
 
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],.flair-twilight,a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after
 {background-position:-100% 0}
@@ -538,17 +544,26 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-screwloose
 {background-position:-100% -2200%}
 
-.flair-snowdrop
+.flair-lightningdust
 {background-position:-100% -2300%}
 
-.flair-adagiodazzle
+.flair-ariablaze
 {background-position:-100% -2400%}
 
-.flair-babsseed
+.flair-cloudyquartz
 {background-position:-100% -2500%}
 
-.flair-igneousrock
+.flair-indigozap
 {background-position:-100% -2600%}
+
+.flair-sunnyflare
+{background-position:-100% -2700%}
+
+.flair-snowdrop
+{background-position:-100% -2800%}
+
+.flair-fleetfoot
+{background-position:-100% -2900%}
 
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],a[href|="/ajdoubt"],a[href|="/rajdoubt"],.flair-fluttershy,a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position:-200% 0}
@@ -577,7 +592,7 @@ a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="
 a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/cockatrice"],a[href|="/rcockatrice"],a[href|="/angel"],a[href|="/rangel"],a[href|="/awwyeah"],a[href|="/rawwyeah"],a[href|="/raritygrump"],a[href|="/rraritygrump"],a[href|="/sshammertime"],a[href|="/sunsethammertime"],.side .md table tr:nth-of-type(17) td:nth-of-type(3):after,.flair-cheerilee
 {background-position:-200% -800%}
 
-a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/twirage"],a[href|="/rtwirage"],a[href|="/photofinish"],a[href|="/rphotofinish"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/rmacintears"],a[href|="/rbigmactears"],.flair-mrcake
+a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/twirage"],a[href|="/rtwirage"],a[href|="/photofinish"],a[href|="/rphotofinish"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/goodjob"],a[href|="/rgoodjob"],a[href|="/starlightgoodjob"],a[href|="/rstarlightgoodjob"],a[href|="/starlightgj"],a[href|="/rstarlightgj"],.flair-mrcake
 {background-position:-200% -900%}
 
 .flair-silverspoon
@@ -619,34 +634,40 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-bulkbiceps
 {background-position:-200% -2200%}
 
-.flair-lightning
+.flair-babsseed
 {background-position:-200% -2300%}
 
-.flair-ariablaze
+.flair-sonatadusk
 {background-position:-200% -2400%}
 
-.flair-moondancer
+.flair-limestonepie
 {background-position:-200% -2500%}
 
-.flair-marblepie
+.flair-lemonzest
 {background-position:-200% -2600%}
 
-a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack,a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
+.flair-peachbottom
+{background-position:-200% -2800%}
+
+.flair-beautybrass
+{background-position:-200% -2900%}
+
+a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],a[href|="/flutterhay"],a[href|="/rflutterhay"],.flair-applejack,a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
 {background-position:-300% 0}
 
-a[href|="/spikemeh"],a[href|="/rspikemeh"],a[href|="/rdsmile"],a[href|="/rrdsmile"],a[href|="/changeling"],a[href|="/rchangeling"],a[href|="/lunamad"],a[href|="/rlunamad"],.flair-cmc,.flair-cmcchinchy,a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],.side .md table tr:nth-of-type(3) td:nth-of-type(4):after
+a[href|="/spikemeh"],a[href|="/rspikemeh"],a[href|="/rdsmile"],a[href|="/rrdsmile"],a[href|="/changeling"],a[href|="/rchangeling"],a[href|="/lunamad"],a[href|="/rlunamad"],a[href|="/sbwtf"],a[href|="/rsbwtf"],.flair-cmc,.flair-cmcchinchy,a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],.side .md table tr:nth-of-type(3) td:nth-of-type(4):after
 {background-position:-300% -100%}
 
-a[href|="/abmeh"],a[href|="/rabmeh"],a[href|="/rdwut"],a[href|="/rrdwut"],a[href|="/rdscared"],a[href|="/rrdscared"],a[href|="/discordsad"],a[href|="/rdiscordsad"],.flair-vinyl,a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],.side .md table tr:nth-of-type(5) td:nth-of-type(4):after
+a[href|="/abmeh"],a[href|="/rabmeh"],a[href|="/rdwut"],a[href|="/rrdwut"],a[href|="/rdscared"],a[href|="/rrdscared"],a[href|="/discordsad"],a[href|="/rdiscordsad"],a[href|="/nightmaregrin"],a[href|="/rnightmaregrin"],.flair-vinyl,a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],.side .md table tr:nth-of-type(5) td:nth-of-type(4):after
 {background-position:-300% -200%}
 
-a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/twidaw"],a[href|="/rtwidaw"],a[href|="/dj"],a[href|="/threedog"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/maud"],a[href|="/rmaud"],.flair-doctor,a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],.side .md table tr:nth-of-type(7) td:nth-of-type(4):after
+a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/twidaw"],a[href|="/rtwidaw"],a[href|="/dj"],a[href|="/threedog"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/maud"],a[href|="/rmaud"],a[href|="/spikeapproves"],a[href|="/rspikeapproves"],.flair-doctor,a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],.side .md table tr:nth-of-type(7) td:nth-of-type(4):after
 {background-position:-300% -300%}
 
-a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/spikepushy"],a[href|="/rspikepushy"],a[href|="/whattheflut"],a[href|="/rwhattheflut"],a[href|="/pinkiepout"],a[href|="/rpinkiepout"],.flair-pokey,a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],.side .md table tr:nth-of-type(9) td:nth-of-type(4):after
+a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/spikepushy"],a[href|="/rspikepushy"],a[href|="/whattheflut"],a[href|="/rwhattheflut"],a[href|="/pinkiepout"],a[href|="/rpinkiepout"],a[href|="/flutternice"],a[href|="/rflutternice"],a[href|="/flutterheadtilt"],a[href|="/rflutterheadtilt"],.flair-pokey,a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],.side .md table tr:nth-of-type(9) td:nth-of-type(4):after
 {background-position:-300% -400%}
 
-a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],.side .md table tr:nth-of-type(11) td:nth-of-type(4):after,.flair-carrottop
+a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/ppdont"],a[href|="/rppdont"],a[href|="/pinkiedont"],a[href|="/rpinkiedont"],.flair-carrottop,a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],.side .md table tr:nth-of-type(11) td:nth-of-type(4):after
 {background-position:-300% -500%}
 
 a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/sunsetwrongneighborhood"],a[href|="/sswrongneighborhood"],a[href|="/sunface"],.side .md table tr:nth-of-type(13) td:nth-of-type(4):after,.flair-braeburn
@@ -697,17 +718,20 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-treehugger
 {background-position:-300% -2100%}
 
-.flair-peachbottom
+.flair-cherryjubilee
 {background-position:-300% -2300%}
 
-.flair-sonatadusk
+.flair-moondancer
 {background-position:-300% -2400%}
 
-.flair-fleetfoot
+.flair-marblepie
 {background-position:-300% -2500%}
 
-.flair-limestonepie
+.flair-soursweet
 {background-position:-300% -2600%}
+
+.flair-harshwhinny
+{background-position:-300% -2800%}
 
 .flair-100-emblem,.flair-100-sunset,.flair-200-emblem,.flair-200-sunset
 {height:42px;width:32px;background-image:url(%%oddballs%%)!important}
