Major file restructure, settings overhaul

--- a/addon/discord/settings.css
+++ b/addon/discord/settings.css
@@ -1,2 +1,14 @@
-
+.bpm-listed-emote {
+    padding: 5px;
+    background-color: #738bd7;
+    color: white;
+    border-width: 1px;
+    border-color: #5E70A9;
+    border-style: solid;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    float: left;
+    border-radius: 2px;
+    cursor: pointer;
+}
 
