Emote settings now functional

--- a/addon/discord/settings.css
+++ b/addon/discord/settings.css
@@ -1,3 +1,8 @@
+.bpm-emote-list {
+    overflow: auto;
+    padding-top: 5px;
+}
+
 .bpm-listed-emote {
     padding: 5px;
     background-color: #738bd7;
@@ -12,3 +17,11 @@
     cursor: pointer;
 }
 
+.bpm-emote-clear-button {
+    margin-bottom: 5px;
+}
+
+.bpm-emote-input {
+    margin-right: 15px;
+    border-bottom 1px solid #f0f0f0;
+}
